# android-llm-localization

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  VerifyStrings.java  fix_strings.py  pyproject.toml  translate_strings.py  verify_strings.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
android_localisation/: __init__.py  cli.py  fix.py  translate.py  verify.py
android_localisation/java/: VerifyStrings.java
