[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "android-localisation"
version = "1.0.0"
description = "Zero-dependency Android strings.xml translation and verification using LLMs (Gemini, OpenAI, Anthropic, Ollama)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["android", "localisation", "localization", "strings", "translation", "llm", "gemini", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.scripts]
android-localise = "android_localisation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["android_localisation*"]

[tool.setuptools.package-data]
android_localisation = ["java/VerifyStrings.java"]
