[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "android-localisation"
version = "1.0.1"
description = "Zero-dependency Android strings.xml translation and verification using LLMs (Gemini, OpenAI, Anthropic, Ollama)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["android", "localisation", "localization", "strings", "strings-xml", "translation", "llm", "gemini", "openai", "anthropic", "ollama", "i18n", "l10n", "android-development", "mobile", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.urls]
Homepage = "https://github.com/BharathKmalviya/android-llm-localization"
Repository = "https://github.com/BharathKmalviya/android-llm-localization"
Issues = "https://github.com/BharathKmalviya/android-llm-localization/issues"
Changelog = "https://github.com/BharathKmalviya/android-llm-localization/blob/master/CHANGELOG.md"

[project.scripts]
android-localise = "android_localisation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["android_localisation*"]

[tool.setuptools.package-data]
android_localisation = ["java/VerifyStrings.java"]
